terraform/networking.tf
#############################################
# Availability Zones
#############################################

data "aws_availability_zones" "available" {}

#############################################
# VPC
#############################################

resource "aws_vpc" "main" {

  cidr_block = var.vpc_cidr

  enable_dns_support = true

  enable_dns_hostnames = true

  tags = {

    Name = "${var.project_name}-vpc"

  }

}

#############################################
# Internet Gateway
#############################################

resource "aws_internet_gateway" "main" {

  vpc_id = aws_vpc.main.id

  tags = {

    Name = "${var.project_name}-igw"

  }

}

#############################################
# Public Subnet A
#############################################

resource "aws_subnet" "public_a" {

  vpc_id = aws_vpc.main.id

  cidr_block = var.public_subnet_az1

  availability_zone = data.aws_availability_zones.available.names[0]

  map_public_ip_on_launch = true

  tags = {

    Name = "${var.project_name}-public-a"

    Tier = "Public"

  }

}

#############################################
# Public Subnet B
#############################################

resource "aws_subnet" "public_b" {

  vpc_id = aws_vpc.main.id

  cidr_block = var.public_subnet_az2

  availability_zone = data.aws_availability_zones.available.names[1]

  map_public_ip_on_launch = true

  tags = {

    Name = "${var.project_name}-public-b"

    Tier = "Public"

  }

}

#############################################
# Private Subnet A
#############################################

resource "aws_subnet" "private_a" {

  vpc_id = aws_vpc.main.id

  cidr_block = var.private_subnet_az1

  availability_zone = data.aws_availability_zones.available.names[0]

  tags = {

    Name = "${var.project_name}-private-a"

    Tier = "Private"

  }

}

#############################################
# Private Subnet B
#############################################

resource "aws_subnet" "private_b" {

  vpc_id = aws_vpc.main.id

  cidr_block = var.private_subnet_az2

  availability_zone = data.aws_availability_zones.available.names[1]

  tags = {

    Name = "${var.project_name}-private-b"

    Tier = "Private"

  }

}

#############################################
# Public Route Table
#############################################

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id

  tags = {

    Name = "${var.project_name}-public-route-table"

  }

}

resource "aws_route" "public_internet" {

  route_table_id = aws_route_table.public.id

  destination_cidr_block = "0.0.0.0/0"

  gateway_id = aws_internet_gateway.main.id

}

#############################################
# Private Route Table
#############################################

resource "aws_route_table" "private" {

  vpc_id = aws_vpc.main.id

  tags = {

    Name = "${var.project_name}-private-route-table"

  }

}

#############################################
# Route Table Associations
#############################################

resource "aws_route_table_association" "public_a" {

  subnet_id = aws_subnet.public_a.id

  route_table_id = aws_route_table.public.id

}

resource "aws_route_table_association" "public_b" {

  subnet_id = aws_subnet.public_b.id

  route_table_id = aws_route_table.public.id

}

resource "aws_route_table_association" "private_a" {

  subnet_id = aws_subnet.private_a.id

  route_table_id = aws_route_table.private.id

}

resource "aws_route_table_association" "private_b" {

  subnet_id = aws_subnet.private_b.id

  route_table_id = aws_route_table.private.id

}
