terraform/security_groups.tf
#############################################
# ALB Security Group
#############################################

resource "aws_security_group" "alb" {

  name        = "${var.project_name}-alb-sg"
  description = "Security group for Application Load Balancer"
  vpc_id      = aws_vpc.main.id

  ingress {

    description = "HTTP"

    from_port = 80

    to_port = 80

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  ingress {

    description = "HTTPS"

    from_port = 443

    to_port = 443

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {

    Name = "${var.project_name}-alb-sg"

  }

}

#############################################
# EC2 Security Group
#############################################

resource "aws_security_group" "ec2" {

  name = "${var.project_name}-ec2-sg"

  description = "Security group for EC2"

  vpc_id = aws_vpc.main.id

  ingress {

    description = "HTTP from ALB"

    from_port = 80

    to_port = 80

    protocol = "tcp"

    security_groups = [

      aws_security_group.alb.id

    ]

  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {

    Name = "${var.project_name}-ec2-sg"

  }

}

#############################################
# RDS Security Group
#############################################

resource "aws_security_group" "rds" {

  name = "${var.project_name}-rds-sg"

  description = "Security group for RDS"

  vpc_id = aws_vpc.main.id

  ingress {

    description = "PostgreSQL from EC2"

    from_port = 5432

    to_port = 5432

    protocol = "tcp"

    security_groups = [

      aws_security_group.ec2.id

    ]

  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {

    Name = "${var.project_name}-rds-sg"

  }

}
